# prbr25-db-ops

./: .gitignore  README.md  pyproject.toml
src/prbr25-db-ops/player/: search.py
src/prbr25_db_ops/: config.py
src/prbr25_db_ops/event/: event_data.py
src/prbr25_db_ops/player/: search.py  tag_search.py
src/prbr25_db_ops/reporting/lock/: initialization.py  updating.py  utils.py  verification.py
src/prbr25_db_ops/reporting/player/: performance_evaluation.py
src/prbr25_db_ops/reporting/tournament/: consolidated.py  rejected.py
